# Mesh2Slam

./: CMakeLists.txt  main.cpp
Mesh2SlamCore/: CMakeLists.txt
Mesh2SlamCore/include/: frame.h  map.h  mapPoint.h  mapping.h  mvg.h  optimizer.h  slam.h  slamConfigFile.yaml  slamParams.h  slamUtils.h  tracking.h  viewer.h
Mesh2SlamCore/shaders/: basicShader.frag  basicShader.vert  coloredVtxShader.frag  coloredVtxShader.vert  vtxFeatureShader.comp  worldPtsShader.frag  worldPtsShader.vert
Mesh2SlamCore/src/: frame.cpp  map.cpp  mapPoint.cpp  mapping.cpp  mvg.cpp  optimizer.cpp  slam.cpp  slamParams.cpp  slamUtils.cpp  tracking.cpp  viewer.cpp
mesh/: Tatami.mtl  tatami.mtl
